@@ -1,3 +1,8 @@
+2009-01-05  Helmut Eller  <heller@common-lisp.net>
+
+	* slime.el (slime-show-compilation-log): Insert two lines at
+	the beginning.  Emacs 21 seems to skip over those two.
+
 2009-01-05  Tobias C. Rittweiler  <tcr@freebits.de>
 
 	* swank-sbcl.lisp (function-arglist):
